fix: adjust hero container height for improved layout and visibility

--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -8,7 +8,7 @@
   margin-left: -50vw;
   margin-right: -50vw;
   overflow: hidden;
-  height: 60vh;
+  height: 110vh;
 
   @media (max-width: 768px) {
     height: 40vh;
@@ -17,7 +17,6 @@
   .hero-image {
     width: 100vw;
     height: 100%;
-    object-fit: cover;
     object-position: center;
     display: block;
   }
